fix white space

--- a/src/App.scss
+++ b/src/App.scss
@@ -16,7 +16,7 @@
 }
 
 .app-body {
-  height: 100vh;
+  height: calc(100vh - 180px);
   width: calc(100% - 20px);
   display: flex;
   flex-direction: column;
