--- a/src/views/diaryItems/DiaryItems.scss
+++ b/src/views/diaryItems/DiaryItems.scss
@@ -6,8 +6,12 @@
   gap: 10px;
   width: 100%;
   overflow-y: auto;
-  height: calc(100vh - 300px);
+  height: calc(100vh - 200px);
+  &:not(:last-child){
+    margin-bottom: 50px;
+  }
 }
+
 
 .action-filters {
   margin-bottom: 10px;
